Spacing Fixes

--- a/sass/_content-list.scss
+++ b/sass/_content-list.scss
@@ -20,39 +20,59 @@
     position: relative;
     margin-bottom: 8px;
     box-sizing: border-box;
+    &::before {
+      content: " ";
+      // float: left;
+      position: absolute;
+      left:47px;
+      min-height: calc(100% - 30px);
+      width: 1px;
+      background-color: rgba(123,180,217,0.2);
+    }
 }
 body >.content .link .rank,
 .rank-spacer {
     width: 3.2ex !important;
 }
 .link .rank {
-    padding: 35px 10px;
+    padding: 0px 10px;
     margin: 0;
-    border-right: 1px solid rgba(86, 103, 118, 0.5);
+    // border-right: 1px solid rgba(86, 103, 118, 0.5);
     text-align: center;
+    line-height: 86px;
 }
 .link .midcol {
-    margin-top: 20px;
+    margin: 17px 15px 0;
 }
 .link .thumbnail{
-    margin-top: 15px;
+    position: relative;
+    height: 70px;
+    margin: 8px 15px 8px 0;
+    img{
+        position: absolute;
+        top:50%;
+        transform: translateY(-50%);
+    }
+    &.self {
+        height: 70px;
+        background-image: url(%%iracing-snoo-post%%);
+        background-repeat: no-repeat;
+        background-position: center;
+    }
 }
 .entry {
     overflow: initial;
-    margin-left: 0px;
+    margin-left: 183px;
 }
 .link p.title {
-    /*font-size: 18px;*/
-    margin-top: 25px;
-    margin-right: 60px;
-    min-height: 65px;
+    margin: 25px 60px 0 0;
 }
 .link a.title {
     color: #fff;
     transition: color 0.2s ease;
 }
 .link a.title:hover {
-    color:#eee;
+    color:#bbb;
     text-decoration: none;
 }
 .link .title:hover {
@@ -66,14 +86,15 @@ body >.content .link .rank,
 }
 .link .tagline{
     box-sizing: border-box;
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 5px;
-    /*left: 0;*/
-    /*width: 100%;*/
-    /*text-align: right;*/
-    /*border-bottom: 1px solid #2e363f;*/
+    padding: 5px 0;
+    // margin-left: 175px;
+    // position: absolute;
+    // top: 0;
+    // right: 0;
+    // left: 0;
+    // width: 100%;
+    // text-align: right;
+    // border-bottom: 1px solid #2e363f;
 }
 
 .expando-button {
@@ -87,9 +108,10 @@ body >.content .link .rank,
 }
 .expando {
     /*clear: left;*/
-    margin: 0;
+    // margin: 0 0 0 47px;
+    margin: 0 0 0 -127px;
     padding: 5px 15px;
-    border-top: 1px solid rgba(171,207,231,0.5);
+    border-top: 1px solid rgba(171,207,231,0.2);
 }
 
 .link.promotedlink.promoted,
@@ -103,13 +125,6 @@ body >.content .link .rank,
     overflow: initial;
 }
 
-.thumbnail.self {
-    height: 55px;
-    background-image: url(%%iracing-snoo-post%%);
-    background-repeat: no-repeat;
-    background-position: initial;
-}
-
 .link .flat-list{
     box-sizing: border-box;
     position: absolute;
@@ -118,7 +133,7 @@ body >.content .link .rank,
     background: rgba(0,0,0,0.3);
     width: 100%;
     border-top: 1px solid rgba(86,103,118,0.5);
-    padding: 6px 0 6px 20px;
+    padding: 6px 0 6px 55px;
 }
 .link.last-clicked .flat-list{
     border-color: rgba(171,207,231,0.5);
